--- a/image1.html
+++ b/image1.html
@@ -2,14 +2,16 @@
 <html >
 <head>
     <title>image1</title>
-    <link rel="stylesheet" href="image1.css">
+    <link rel="stylesheet" href="./image1.css">
 </head>
 <body>
     <div class="grid-container">
     <div class="item1">section1</div>
     <div class="item2">section2</div>
     <div class="item3">section3</div>
-    <div class="item4">main content</div>
+    <div class="item4">main content
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, ratione ducimus assumenda consectetur laudantium recusandae illum, vitae fuga dolore deserunt ab iusto, nostrum ullam rem quia consequuntur accusamus architecto deleniti.</p>
+    </div>
     <div class="item5">extra content</div>
     <div class="item6">related images</div>
     <div class="item7">related posts</div>
