--- a/image2.html
+++ b/image2.html
@@ -1,33 +1,43 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>image2</title>
-    <link rel="stylesheet" href="image2.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="items">
-        <img src="pro.webp" alt="" />
-        <div>
-          <h2>User#1</h2>
-          <p>IOS development</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="image2.css">
+    <title>task2</title>
+</head>
+<body>
+    <div class="card">
+        <div class="employee">
+          <div class="pic"></div>
+          <div class="info">
+            <p class="name"><strong>User #1</strong></p>
+            <p class="job">IOS development</p>
+          </div>
+        </div>
+        <div class="employee">
+          <div class="pic"></div>
+          <div class="info">
+            <p class="name"><strong>User #2</strong></p>
+            <p class="job">computer programming</p>
+          </div>
+        </div>
+        <div class="employee">
+          <div class="pic"></div>
+          <div class="info">
+            <p class="name"><strong>User #3</strong></p>
+            <p class="job">Software Engineering</p>
+          </div>
+        </div>
+        <div class="employee">
+          <div class="pic"></div>
+          <div class="info">
+            <p class="name"><strong>User #4</strong></p>
+            <p class="job">Computer Engineering</p>
+          </div>
         </div>
       </div>
-      <div class="items"> <img src="pro.webp" alt="" />
-        <div>
-          <h2>User#2</h2>
-          <p>computer programming</p>
-        </div></div>
-      <div class="items"> <img src="pro.webp" alt="" />
-        <div>
-          <h2>User#3</h2>
-          <p>software engineering</p>
-        </div></div>
-      <div class="itemsx"> <img src="pro.webp" alt="" />
-        <div>
-          <h2>User#4</h2>
-          <p>computer engineering</p>
-        </div></div>
-    </div>
-  </body>
+    
+     
+</body>
 </html>
