--- a/image3.html
+++ b/image3.html
@@ -1,19 +1,23 @@
+
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="image3.css">
+    <meta charset="UTF-8">
+<link rel="stylesheet" href="image3.css">   
+ <title>task3</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item1">Header</div>
-        <div class="item2">Aside</div>
-        <div class="item3">Article
-            <div>Image</div>
-            <div>Image</div>
-            <div>Image</div>
-        </div>
-        <div class="item4">Footer</div>
-    </div>
+
+     <div class="container">
+        <header class="header"><p>Header</p></header>
+        <aside class="aside">Aside</aside>
+        <article class="article"> article
+          <div class="image">image </div>
+          <div class="image">Image </div>
+          <div class="image">Image </div>
+        </article>
+        <footer class="footer">Footer</footer>
+      </div>
+      
 </body>
 </html>
