--- a/image2.html
+++ b/image2.html
@@ -1,43 +1,39 @@
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="image2.css">
-    <title>task2</title>
-</head>
-<body>
-    <div class="card">
-        <div class="employee">
-          <div class="pic"></div>
-          <div class="info">
-            <p class="name"><strong>User #1</strong></p>
-            <p class="job">IOS development</p>
-          </div>
-        </div>
-        <div class="employee">
-          <div class="pic"></div>
-          <div class="info">
-            <p class="name"><strong>User #2</strong></p>
-            <p class="job">computer programming</p>
-          </div>
-        </div>
-        <div class="employee">
-          <div class="pic"></div>
-          <div class="info">
-            <p class="name"><strong>User #3</strong></p>
-            <p class="job">Software Engineering</p>
-          </div>
-        </div>
-        <div class="employee">
-          <div class="pic"></div>
-          <div class="info">
-            <p class="name"><strong>User #4</strong></p>
-            <p class="job">Computer Engineering</p>
-          </div>
+<html>
+  <head>
+    <title>image2</title>
+    <link rel="stylesheet" href="image2.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="items">
+        <img src="pro.webp" alt="" />
+        <div>
+          <p class="n">User#1</p>
+          <p class="c">IOS deveploment</p>
         </div>
       </div>
-    
-     
-</body>
+      <div class="items">
+        <img src="pro.webp" alt="" />
+        <div>
+          <p class="n">User#2</p>
+          <p class="c">computer programming</p>
+        </div>
+      </div>
+      <div class="items">
+        <img src="pro.webp" alt="" />
+        <div>
+          <p class="n">User#3</p>
+          <p class="c">Software Engineering</p>
+        </div>
+      </div>
+      <div class="l">
+        <img src="pro.webp" alt="" />
+        <div>
+          <p class="n">User#4</p>
+          <p class="c">Computer Engineering</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
