--- a/image3.html
+++ b/image3.html
@@ -1,23 +1,24 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-<link rel="stylesheet" href="image3.css">   
- <title>task3</title>
+    <title>Image3</title>
+    <link rel="stylesheet" href="image3.css">
 </head>
 <body>
+    <div class="container">
+        <div class="bnbn item1">Header</div>
+        <div class="bnbn item2 ">Aside</div>
+        <div class="bnbn item3">Article
+            <div class="a7a">
+                <div class="img">Image</div>
+                <div class="img">Image</div>
+                <div class="img">Image</div>
+            </div>
 
-     <div class="container">
-        <header class="header"><p>Header</p></header>
-        <aside class="aside">Aside</aside>
-        <article class="article"> article
-          <div class="image">image </div>
-          <div class="image">Image </div>
-          <div class="image">Image </div>
-        </article>
-        <footer class="footer">Footer</footer>
-      </div>
-      
+
+        </div>
+        <div class="bnbn item4">Footer</div>
+    </div>
+    
 </body>
 </html>
